[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.0",
    "langgraph>=1.2.4",
    "langsmith>=0.8.8",
    "openai>=2.40.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "sentry-sdk[fastapi]>=2.0.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.48.0",
]
[tool.setuptools]
packages = ["db", "routers", "services", "evals"]
